...
                    android:fontFamily="sans-serif"
                    android:textColor="@color/text_primary"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:minHeight="58dp"
                android:text="REGISTRATI"
                android:textSize="16sp"
...
